--- a/source/_posts/manjaro20-2-2020.md
+++ b/source/_posts/manjaro20-2-2020.md
@@ -10,10 +10,6 @@ categories: ["Linux","Manjaro"]
 
 > sudo pacman-mirrors -i -c China -m rank
 
-在弹出窗口中选择排第一位的源，然后刷新缓存：
-
-> sudo pacman -Syy
-
 然后添加 ArchLinuxCN 的源，编辑/etc/pacman.conf，在文件末尾添加如下内容：
 
 > [archlinuxcn]
@@ -63,7 +59,21 @@ export XMODIFIERS="@im=fcitx"
 
 重启或注销即可显示，可在终端用fcitx-configtool配置输入法
 
-### 三、其他软件
+### 三、mysql
+
+> //下载Mysql
+pacman -S mysql
+//初始化Mysql，记住生成的密码，方便修改
+sudo mysqld --initialize --user=mysql --basedir=/usr --datadir=/var/lib/mysql
+//设置开机启动
+systemctl enable mysqld.service
+//启动Mysql
+sudo systemctl start mysqld.service
+//修改密码
+mysql -u root -p
+mysql> ALTER USER 'root'@'localhost' IDENTIFIED BY '新密码';
+
+### 四、其他软件
 
 ```shell
 sudo pacman -S code                 #VScode
