--- a/source/_posts/manjaro20-2-2020.md
+++ b/source/_posts/manjaro20-2-2020.md
@@ -85,6 +85,57 @@ yay wps-office
 sudo pacman -S flameshot			#火焰截图
 ```
 
+### 五、 QQ、WeChat
+安装deepin-wine5的qq(由于基于deepin-wine 2版的不能使用，直接从aur下载安装
+
+```
+yay -S com.qq.im.deepin
+yay -S deepin-wine-tim
+```
+
+安装deepin-wine的微信
+
+```
+yay -S com.qq.weixin.deepin
+```
+
+KDE、XFCE以及其他不是基于gnome桌面的用户看过来（**重要，重要，重要**）
+kde运行deepin-wine的话需要安装xsettingsd
+
+```
+sudo pacman -S xsettingsd
+```
+
+之后就可以愉快的玩耍了
+
+字体有些虚的话安装lib32-freetype2-infinality-ultimate
+
+```
+sudo pacman -S lib32-freetype2-infinality-ultimate
+```
+
+
+
+## 修改字体DPI(Tim与qq修改下关键字）
+
+微信
+
+```
+env WINEPREFIX="$HOME/.deepinwine/Deepin-WeChat" deepin-wine5 winecfg
+```
+
+QQ
+
+```
+env WINEPREFIX="$HOME/.deepinwine/Deepin-QQ" deepin-wine5 winecfg
+```
+
+调节DPI到125
+
+
+
+
+
 
 
 ## 科学上网
