--- a/source/_posts/manjaro20-2-2020.md
+++ b/source/_posts/manjaro20-2-2020.md
@@ -40,7 +40,7 @@ sudo pacman -S zsh
 sh -c "$(curl -fsSL https://gitee.com/mirrors/oh-my-zsh/raw/master/tools/install.sh)"
 ```
 
-### 二、搜狗输入法
+### 二、搜狗输入法（更推荐现在使用fcitx5或者rime）
 
 ``` shell
 sudo pacman -S fcitx-im             # 全部安装
@@ -116,7 +116,7 @@ sudo pacman -S lib32-freetype2-infinality-ultimate
 
 
 
-## 修改字体DPI(Tim与qq修改下关键字）
+#### 修改字体DPI(Tim与qq修改下关键字）
 
 微信
 
@@ -138,7 +138,7 @@ env WINEPREFIX="$HOME/.deepinwine/Deepin-QQ" deepin-wine5 winecfg
 
 
 
-## 科学上网
+### 六、科学上网
 
 科学上网可以参考如下地址，下载electron-ssr
 
@@ -154,7 +154,7 @@ auto switch用到的规则链表https://raw.githubusercontent.com/gfwlist/gfwlis
 
 
 
-## 终端下Trojan代理
+### 七、终端下Trojan代理
 
 命令行使用Trojan代理
 
@@ -174,7 +174,7 @@ auto switch用到的规则链表https://raw.githubusercontent.com/gfwlist/gfwlis
 
 
 
-## manjaro下网易云音乐无法输入中文
+### 八、manjaro下网易云音乐无法输入中文
 
 在manjaro下安装好网易云音乐后，却无法输入中文。原因是manjaro下没有用它的框架导致，通过以下方法解决。
 
@@ -205,7 +205,7 @@ $ sudo pacman -S vlc
 
 
 
-## 百度云网盘
+### 九、安装deb包的方法
 
 由于百度云盘出了Linux版，我们可以下载.deb的文件包（**也可使用dpkg包管理来安装.deb包，但不推荐**sudo dpkg -i package.deb）
 
@@ -231,7 +231,7 @@ $ sudo pacman -S vlc
 
 
 
-## powerlevel10k / vim-plug
+### 十、powerlevel10k / vim-plug
 
 ```shell
 # powerlevel10k
