--- a/source/_posts/manjaro20-2-2020.md
+++ b/source/_posts/manjaro20-2-2020.md
@@ -42,6 +42,8 @@ sh -c "$(curl -fsSL https://gitee.com/mirrors/oh-my-zsh/raw/master/tools/install
 
 ### 二、搜狗输入法（更推荐现在使用fcitx5或者rime）
 
+fcitx5的安装可参考我的文章 [你的下一个输入法何必是搜狗，拥抱fictx5](https://austinwilliam117.github.io/2020/12/28/%E4%BD%A0%E7%9A%84%E4%B8%8B%E4%B8%80%E4%B8%AA%E8%BE%93%E5%85%A5%E6%B3%95%E4%BD%95%E5%BF%85%E6%98%AF%E6%90%9C%E7%8B%97%EF%BC%8C%E6%8B%A5%E6%8A%B1fcitx5/)
+
 ``` shell
 sudo pacman -S fcitx-im             # 全部安装
 sudo pacman -S fcitx-configtool     # 图形化配置工具
@@ -73,7 +75,7 @@ sudo systemctl start mysqld.service
 mysql -u root -p
 mysql> ALTER USER 'root'@'localhost' IDENTIFIED BY '新密码';
 
-### 四、其他软件
+### 四、其他软件/字体
 
 ```shell
 sudo pacman -S code                 #VScode
@@ -82,8 +84,39 @@ sudo pacman -S typora
 sudo pacman -S latte-dock
 sudo pacman -S yay
 yay wps-office
-sudo pacman -S flameshot			#火焰截图
+sudo pacman -S flameshot        #火焰截图
 ```
+
+中文字体安装：manjaro的中文字体比较丑，还有辨识度低的问题。**极为推荐安装其他字体**
+个人认为思源黑体最为好看
+
+**用法sudo pacman -S packname**
+```text
+思源字体包名
+adobe-source-han-serif-cn-fonts - 思源宋体简体中文部分
+adobe-source-han-serif-tw-fonts - 思源宋体繁体中文部分
+adobe-source-han-sans-cn-fonts - 思源黑体简体中文部分
+adobe-source-han-sans-tw-fonts - 思源黑体繁体中文部分
+
+文泉驿字体包名
+wqy-zenhei - 文泉驿正黑体，黑体 (无衬线) 的中文轮廓字体，附带文泉驿点阵宋体 (也支持部分日韩字符)。
+wqy-bitmapfont - 文泉驿点阵宋体 (衬线) 中文字体。
+
+```
+
+[可参考wiki.archlinux fonts中文](https://wiki.archlinux.org/index.php/Fonts_(%E7%AE%80%E4%BD%93%E4%B8%AD%E6%96%87))
+
+
+**Hack Nerd Font的安装** **<font color="FF5733">mono类字体会导致zsh图标过下，慎用</font>**
+
+链接及教程：https://github.com/ryanoasis/nerd-fonts/tree/master/patched-fonts/Hack
+
+下载过慢可网盘链接: https://pan.baidu.com/s/1PjrhtPwWG_XaAyCZ-xZ0OA  密码: mbdp
+
+
+可参考
+https://github.com/ryanoasis/nerd-fonts 提供多种字体
+
 
 ### 五、 QQ、WeChat
 安装deepin-wine5的qq(由于基于deepin-wine 2版的不能使用，直接从aur下载安装
@@ -133,6 +166,13 @@ env WINEPREFIX="$HOME/.deepinwine/Deepin-QQ" deepin-wine5 winecfg
 调节DPI到125
 
 
+#### 修改deepin wechat中文输入时为方块问题
+
+> sudo gedit /opt/deepinwine/tools/run.sh
+
+找到 **WINE_CMD="deepin-wine"** 修改为
+
+> WINE_CMD="LC_ALL=zh_CN.UTF-8 deepin-wine"
 
 
 
