--- a/source/_posts/manjaro20-2-2020.md
+++ b/source/_posts/manjaro20-2-2020.md
@@ -1,8 +1,8 @@
 ---
 title: manjaro20.2 2020
 date: 2020-12-24 20:13:37
-tags: ["Linux","Manjaro"]
-categories: ["Linux","Manjaro"]
+tags: ["Manjaro"]
+categories: ["Linux"]
 ---
 
 
