--- a/source/_posts/梦游天姥吟留别.md
+++ b/source/_posts/梦游天姥吟留别.md
@@ -1,8 +1,8 @@
 ---
 title: 梦游天姥吟留别
 date: 2021-01-04 17:44:19
-tags: ["李白"]
-categories: ["诗词曲"]
+tags: ["诗词歌赋"]
+categories: ["随笔"]
 ---
 
 <center>
