--- a/source/_posts/微信公众号思考.md
+++ b/source/_posts/微信公众号思考.md
@@ -1,8 +1,8 @@
 ---
 title: 微信公众号思考
 date: 2019-11-08 20:23:24
-tags: ["微信公众号","随笔"]
-categories: ["随笔","微信公众号"]
+tags: ["微信公众号"]
+categories: ["随笔"]
 ---
 
 
