--- a/source/_posts/梦游天姥吟留别.md
+++ b/source/_posts/梦游天姥吟留别.md
@@ -5,7 +5,7 @@ tags: ["诗词歌赋"]
 categories: ["随笔"]
 ---
 
-{% meting "002Rgg8P4PdjXa" "tencent" "song" %}
+{% meting "003xZpo83ch2FN" "tencent" "song" %}
 
 <center>
 
