--- a/source/_posts/禅道使用流程.md
+++ b/source/_posts/禅道使用流程.md
@@ -2,7 +2,7 @@
 title: 禅道使用流程
 date: 2021-01-14 21:41:44
 tags: ["禅道"]
-categories: ["测试软件"]
+categories: ["软件测试"]
 ---
 
 ![禅道使用流程图 展开全文查看](禅道软件使用流程.png)
