--- a/source/_posts/愿那些善良的人能被温柔以待.md
+++ b/source/_posts/愿那些善良的人能被温柔以待.md
@@ -32,7 +32,7 @@ categories: ["随笔"]
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在我爸回家之前，她一直不愿意去报警，觉得报警也没有用。最后还是做我爸车去了派出所。
 
-&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;没想到耶证已经影响她那么深了，每一句都是对整个社会的抱怨。我和她说，你不去报警也是对恶人的默许和纵容，何必说社会的险恶。我知道她比较信上帝说的善，所以这么说的她。但我也相信世界是美好的。
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;没想到耶证已经影响她那么深了，每一句都是对整个社会的抱怨。我和她说，你不去报警也是对恶人的默许和纵容，何必说社会的险恶。我知道她比较信上帝说的善，所以这么说的她。我相信世界残酷但也美丽。
 
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;在我很小的时候，我妈就信基督教了。03年的时候，就已经入了“耶和华见证人”了。家里有很多送的书，本来想阻止她继续学习的。和一些反邪教的人沟通过，也是没什么好的办法。
 
