--- a/source/_posts/雪.md
+++ b/source/_posts/雪.md
@@ -7,13 +7,17 @@ categories: ["随笔"]
 
 {% meting "586299" "netease" "song" %}
 
-忽有故人心上过，回首山河已入冬。
-他朝有幸同淋雪，此生也算共白头。
+
+岁月几许沧桑，人间几多风雪，遥望雪花飘洒，梦回古时华夏。
 
 <!--more-->
 
+![img7](2021-01-25_18-46.png)
+
+忽有故人心上过，回首山河已入冬。他朝有幸同淋雪，此生也算共白头。
+
 ![img2](2021-01-25_18-46_1.png)
 
-![img7](2021-01-25_18-46.png)
+
 
 
