--- a/source/_posts/少司命.md
+++ b/source/_posts/少司命.md
@@ -14,6 +14,7 @@ categories: ["随笔"]
 夫人自有兮美子，荪何㠯兮愁苦？</br>
 秋兰兮青青，绿叶兮紫茎。</br>
 满堂兮美人，忽独与余兮目成。</br>
+<!--more-->
 入不言兮出不辞，乘回风兮载云旗。</br>
 悲莫悲兮生别离，乐莫乐兮新相知。</br>
 荷衣兮蕙带，儵而来兮忽而逝。</br>
