--- a/source/_posts/成年人的世界.md
+++ b/source/_posts/成年人的世界.md
@@ -13,7 +13,7 @@ categories: ["随笔"]
 
 钱是负责加货的领导拿，分我妈500块。我妈不想做，但是没办法。如果不做，领导不会给康师傅家加货，导致我妈自己的工作没有货卖，还会安排其他超市杂活。
 
-超市是超市领导和科长共同管理的。不是一家公司的事。而且我妈以为就帮人家几天忙，就给录入了福临门家的身份信息。这下就很难跟别人说清楚了
+超市是超市领导和科长共同管理的。不是一家公司的事。而且我妈以为就帮人家几天忙，就给录入了福临门家的身份信息,她跟我说这是生存之道。不过这下就很难跟别人说清楚了。
 
 今天我妈早上工作忙，没有看手机，回复堆货信息（此时科长已经得知有人没可能偷懒）。之后和业务说明情况后，就干活去了。而业务不敢说这事，也怕领导。
 
@@ -32,4 +32,5 @@ categories: ["随笔"]
 或许底层的老一辈们，为了生存，抛弃了所有能抛弃的一切，妈妈的梦想又是什么呢？结婚生子，为生存和工作，再到抱孙子，然后在所有人泪流满面后，闭上双眼。在这一生中，空缺的地方都是为了生存而东北西走，缺少了人的梦想，这一生总要给自己点什么东西吧，而不是为了别人。
 
 加油吧，妈妈！尝试维权，努力说不，或许还能实现儿时的梦想呢，有我支持你。
+
 
