--- a/source/_posts/雪.md
+++ b/source/_posts/雪.md
@@ -14,7 +14,7 @@ categories: ["随笔"]
 
 ![img7](2021-01-25_18-46.png)
 
-忽有故人心上过，回首山河已入冬。他朝有幸同淋雪，此生也算共白头。
+就着这今天的雪景，也抄手小诗，品品人间风景。
 
 ![img2](2021-01-25_18-46_1.png)
 
