--- a/source/_posts/献给阿尔吉侬的花束.md
+++ b/source/_posts/献给阿尔吉侬的花束.md
@@ -1,8 +1,8 @@
 ---
 title: 献给阿尔吉侬的花束
 date: 2021-05-02 19:29:32
-tags: ["书评"]
-categories: ["2021"]
+tags: ["2021"]
+categories: ["书评"]
 ---
 
 {% meting "476646283" "netease" "song" %}
