--- a/source/_posts/献给阿尔吉侬的花束.md
+++ b/source/_posts/献给阿尔吉侬的花束.md
@@ -7,8 +7,6 @@ categories: ["书评"]
 
 {% meting "476646283" "netease" "song" %}
 
-## 献给阿尔吉侬的花束
-
 > ​	我害怕。不是恐惧生命，或死亡，或是虚无，而是害怕虚掷生命，好像我从来不曾存在过似的。
 
 ### 故事介绍
@@ -19,7 +17,13 @@ categories: ["书评"]
 
 ### 个人感受
 
-书中大部分个人情感写在了微信读书和未来得及记录的眼泪中。我不会再将之搬到这个不算书评的文章中。情感只有一次，我已留下痕迹。就像作画一样，没有两幅一样的作品，因为他们在创作中投入的感情不同。现在的我感觉内心空空的，装不下任何东西。
+书中大部分个人情感都留在了微信读书和未来得及记录的眼泪中。
+
+还是总结性的说一下。世界上任何一个生命都值得被尊重。不管是动物，还是人。不论是否带有疾病，或缺陷。当人类通过科技的手术刀，改变了生命，他还是属于自然界的，而非人所创造。
+
+那些勇于献身的人值得我们铭记
+
+我不会将微信读书中的内容再搬到这里来了。情感只有一次，我已留下痕迹。就像作画一样，没有两幅一样的作品，因为他们在创作中投入的感情不同。现在的我感觉内心空空的，装不下任何东西。
 
 ### 摘抄
 
