--- a/source/_posts/实验6-寻址方式在结构化数据访问中的应用.md
+++ b/source/_posts/实验6-寻址方式在结构化数据访问中的应用.md
@@ -36,7 +36,7 @@ datasg 中的数据的存储结构
 
 我们可以看到，在 datasg 中定义了6个字符串，每个长度为16个字节（注意，为了直观，每个字符串后面都加上了空格符，以使它们的长度刚好为16个字节）。因为它们是连续存放的，可以将这6个字符串看成一个6行16列的二维数组。按要求，需要修改每个单词的第一个字母，即二维数组的每一行的第4列（相对于行首的偏移地址为3）
 
-![](/1.png)
+![](1.png)
 
 ```asm
 assume cs:codesg, ds:datasg
@@ -93,7 +93,7 @@ end start
 
 datasg 中的数据的存储结构如图
 
-![](/2.png)
+![](2.png)
 
 我们需要进行 4X3次的二重循环，用变量R定位，变量C定位列。外层循环按行来进行，内层按列来进行。首先用R定位第1行，然后循环修改R行的前3列；然后再用R定位到下一行，再次循环修改R行的前3列......，如此重复直到所有的数据修改完毕，处理的过程大致如下。
 
@@ -292,7 +292,7 @@ end start
 
 datasg 中的数据的存储结构
 
-![](/3.png)
+![](3.png)
 
 在datasg中定义了4个字符串，每个长度为16个字节（注意，为了是使我们在Debug中可以直观地查看，每个字符串的后面都加上了空格，以使它们的长度刚好为16个字节）。因为它们是连续存放的，我们可以将这4个字符串看成一个4行16列的二维数组，按照要求，我们需要修改每个单词的前4个字母，即二维数组的每一行的3～6列
 
@@ -319,3 +319,54 @@ s:			改变R行，3+C列的字母为大写
 我们用 bx 作为变量，定位每行的起始地址，用 si 定位要修改的列，用[bx+3+si]的方式来对目标单元进行寻址。
 
 
+```asm
+assume cs:codesg,ss:stacksg,ds:datasg
+
+stacksg segment
+
+   dw 0,0,0,0,0,0,0,0
+
+stacksg ends
+
+datasg segment
+
+   db '1. display      '
+   db '2. brows        '
+   db '3. replace      '
+   db '4. modify       '
+
+datasg ends
+
+codesg segment
+
+start:  mov ax,stacksg
+        mov ss,ax
+        mov sp,16
+        mov ax,datasg
+        mov ds,ax
+        mov bx,0
+        mov cx,4
+
+    s:  push cx
+        mov di,3
+        mov cx,4
+
+    s0: mov al,[bx+di]
+        and al,11011111b
+        mov [bx+di],al
+        inc di
+        loop s0
+
+        pop cx
+        add bx,16
+        loop s
+
+        mov ax,4c00h
+        int 21
+
+codesg ends
+
+end start
+```
+
+代码的执行过程可参考 [实验5](http://mengxun.club/2021/05/15/%E5%AE%9E%E9%AA%8C5-%E7%BC%96%E5%86%99%E3%80%81%E8%B0%83%E8%AF%95%E5%85%B7%E4%BD%93%E5%A4%9A%E4%B8%AA%E6%AE%B5%E7%9A%84%E7%A8%8B%E5%BA%8F/)
