--- a/source/_posts/实验10-编写子程序.md
+++ b/source/_posts/实验10-编写子程序.md
@@ -75,16 +75,6 @@ end start
 参考答案：
 
 ```asm
-assume cs:code,ds:data,ss:stack
-
-data segment
-    db 'Welcome to masm!',0
-data ends
-
-stack segment stack
-    db 128 dup (0)
-stack ends
-
 
 ;名称：show_str
 
@@ -94,82 +84,91 @@ stack ends
 
 ;返回：无
 
-;应用举例：在屏幕的8行3列，用绿色显示 data 段中的字符串
+;应用举例：在屏幕的8行3列，用绿色显示 data 段中的字符串[201~)]
+
+assume cs:code,ss:stack,ds:data
+
+data segment
+    db 'Welcome to masm!',0
+data ends
+
+stack segment stack
+    db 128 dup (0)
+stack ends
 
 code segment
 
-    start:  mov ax,stack
+start:      mov ax,stack
             mov ss,ax
             mov sp,128
 
+            mov di,0
+            mov si,0
+            mov ax,0
+
             call init_reg
 
-            mov di,0
-
-            mov dh,8
-            call get_row
-            add di,ax           ;拿到行的返回值
-
-            mov dl,3
             call get_col
-            add di,ax           ;拿到列的返回值
+            add di,ax               ;拿到列的返回值
+            call get_row
+            add di,ax               ;拿到行的返回值
 
             mov cl,2
-            mov dl,cl
-
-            mov si,0
-            call show_str
+            call show_reg
 
             mov ax,4c00h
             int 21h
 
-show_str:   push cx
-            push dx
-            push ds
-            push es
+;====================================
+show_reg:   push di										
             push si
-            push di
+            push cx
+            push dx
+            push es
 
             mov cx,0
+            mov dl,2
 
-showStr:    mov cl,ds:[si]
-            jcxz showStrRet
-            mov es:[di],cl      ;偶数字节
-            mov es:[di+1],dl    ;奇数显示颜色
+show_str:   mov cx,ds:[si]          ;如果cx不为0继续循环
+            jcxz show_Ret
+            mov es:[di],cx          ;偶数显示字节
+            mov es:[di+1],dl        ;奇数显示颜色,2为绿色
             add di,2
             inc si
-            jmp showStr         ;用jmp做while循环，知道cx=0,跳转至showStrRet
+            loop show_str 
 
-showStrRet: pop di										;子程序开始前将所有寄存器都放入栈中，子程序返回后恢复，防止寄存器冲突
-            pop si
-            pop es
-            pop ds
+show_Ret:   pop es
             pop dx
             pop cx
+            pop si
+            pop di
+
             ret
 
-;=================================
-get_row:    mov al,160
-            mul dh              ;一行160个字节，乘8就是8行
+;====================================
+get_col:    mov dh,8
+            mov al,160              ;一行160个字节，乘以8就是8行
+            mul dh
             ret
 
-;=================================
-get_col:    mov al,3
-            mul dl              ;屏幕一个字符占2个字节
+;====================================
+get_row:    mov dl,3
+            mov al,2                ;屏幕一个字符占两个字节
+            mul dl
             ret
 
-;=================================初始化寄存器
-init_reg:   mov bx,0B800H
-            mov es,bx
-
-            mov bx,data
+;====================================初始化寄存器
+init_reg:   mov bx,data
             mov ds,bx
 
-            ret
+            mov bx,0B800H
+            mov es,bx
+            ret 
 
 code ends
 
 end start
+
 ```
 
 
